--- a/gb/19/6/26/n11346771.md
+++ b/gb/19/6/26/n11346771.md
@@ -1,53 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh2/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh2/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh2/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¡°±±Á÷¡±ÐÎÏóÓ°Æ¬½ðÇúÊ×²¥ ÀÖÍÅÇÑ×Óµ°Ö÷ÑÝ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/06/1906260241591487-600x400.jpg" />
-<h6>¡°Ì¨±±Á÷ÐÐÒôÀÖÖÐÐÄ¡±£¨ÒÔÏÂ¼ò³Æ±±Á÷ÖÐÐÄ£©Ê×Ö§ÐÎÏóÓ°Æ¬Ê×²¥£¬ÓÉÀÖÍÅÇÑ×Óµ°µ£¸ÙÖ÷ÑÝ¡££¨ÇÑ×Óµ°Ìá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oqudue369/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>â€œåŒ—æµâ€å½¢è±¡å½±ç‰‡é‡‘æ›²é¦–æ’­ ä¹å›¢èŒ„å­è›‹ä¸»æ¼”</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/1906260241591487-600x400.jpg" />
+<h6>â€œå°åŒ—æµè¡ŒéŸ³ä¹ä¸­å¿ƒâ€ï¼ˆä»¥ä¸‹ç®€ç§°åŒ—æµä¸­å¿ƒï¼‰é¦–æ”¯å½¢è±¡å½±ç‰‡é¦–æ’­ï¼Œç”±ä¹å›¢èŒ„å­è›‹æ‹…çº²ä¸»æ¼”ã€‚ï¼ˆèŒ„å­è›‹æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ26ÈÕÑ¶¡¿¾­¹ý½ü°ëÄêÔÍÄð£¬¡°<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E6%B5%81%E8%A1%8C%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83.md">Ì¨±±Á÷ÐÐÒôÀÖÖÐÐÄ</a>¡±£¨ÒÔÏÂ¼ò³Æ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%8C%97%E6%B5%81.md">±±Á÷</a>ÖÐÐÄ£©Ê×Ö§ÐÎÏóÓ°Æ¬ÖÕÓÚÍê³É£¬²¢½«ÓÚ29ÈÕµÚ30½ì½ðÇú°ä½±µäÀñÏÖ³¡È«ÇòÊ×²¥¡£±±Á÷ÖÐÐÄÐÎÏóÓ°Æ¬ÒÔ±±Á÷±íÑÝÌüÊµ¾°½áºÏÒôÀÖ¿ç½ç³±Á÷Éè¼Æ£¬Ç¿µ÷¡°¼á³Ö¡±µÄÖØÒª£¬ÑûÇëÐÂÉú´ú´´×÷ÀÖÍÅ¡°<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E8%8C%84%E5%AD%90%E8%9B%8B.md">ÇÑ×Óµ°</a>¡±ÑÝ×Ô¼º£¬ÕâÒ²ÊÇÇÑ×Óµ°³öµÀÒÔÀ´Ê×¶È²ÎÓëÓ°Æ¬ÑÝ³ö¡£</p>
-<figure id="attachment_11346799" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/06/1906260242031487.jpg"><img class="size-large wp-image-11346799" title="" src="http://i.epochtimes.com/assets/uploads/2019/06/1906260242031487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">¡°<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E6%B5%81%E8%A1%8C%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83.md">Ì¨±±Á÷ÐÐÒôÀÖÖÐÐÄ</a>¡±£¨ÒÔÏÂ¼ò³Æ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%8C%97%E6%B5%81.md">±±Á÷</a>ÖÐÐÄ£©Ê×Ö§ÐÎÏóÓ°Æ¬Ê×²¥£¬ÓÉÀÖÍÅ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E8%8C%84%E5%AD%90%E8%9B%8B.md">ÇÑ×Óµ°</a>µ£¸ÙÖ÷ÑÝ¡££¨ÇÑ×Óµ°Ìá¹©£©</figcaption></figure>
-<p>±±Á÷ÖÐÐÄÐÎÏóÓ°Æ¬ÓÉµ¼ÑÝ³ÂÞÈÈÊÍ³³ï£¬ÂÊÁìÏÉ²ÝÓ°ÏñÍÅ¶ÓÅÄÉã£¬ÃèÊöÐÂÉú´úÀÖÍÅÈçºÎ´ÓÄ¬Ä¬ÎÞÎÅÒ»Â·µÇÉÏ±±Á÷6000ÈËÎèÌ¨µÄ¹ÊÊÂ¡£</p>
-<p>µ¼ÑÝÒÔ¸´¹Å2D¶¯»­ÈÚºÏÊµ¾°ÅÄÉãÊÖ·¨£¬³ÊÏÖÀÖÍÅ¡°³ÉÃûÔÚÍû¡±¹ý³ÌÖÐ£¬¡°¼á³Ö¡±µÄÖØÒªÐÔ¡£Ôø¾­Á¬·¹¶¼³Ô²»±¥£¬¡°ÍæÒôÀÖ¡±Òª³ÉÎªÖ°Òµ£¬¸üÊÇÃæÁÙÐí¶àÀ§ÄÑ¡£±±Á÷ÐÎÏóÓ°Æ¬³ýÁË´ø¸øÃñÖÚ×îÐÂµÄ¸Ð¹Ù´Ì¼¤£¬Ò²´«´ï³¡¹ÝÌá¹©¸ü¶àÐÂÉú´ú¸èÊÖµÇÉÏÎèÌ¨»ú»áµÄÀíÄî¡£</p>
-<p>±±Á÷ÖÐÐÄÐÎÏóÓ°Æ¬¡°º¬½ðÁ¿¡±³¬¸ß£¬Ö÷½ÇÇÑ×Óµ°ÊÇÈ¥Äê£¨µÚ29½ì£©½ðÇúÐÂÈË½±µÃÖ÷¡¢½ñÄêÔÙ´ÎÒÔ¡¶ÀËÁ÷Á¬¡·ÈëÎ§Äê¶È¸èÇú½±¡£µ¼ÑÝ³ÂÞÈÈÊÒ²ÊÇ½ðÇú³£Ê¤¾ü£¬½ñÄêÒÔ²ÌÒÀÁÖ¡¶¹ÖÃÀµÄ¡·MVÈëÎ§×î¼ÑÒôÀÖÂ¼Ó°´ø½±¡£</p>
-<p>±±Á÷ÐÎÏóÓ°Æ¬²¥·ÅÉÏÌØ±ðÉè¼ÆÐ¡ÇÉË¼£¬·Ö±ðÔÚ½ðÇúÐÇ¹â´óµÀ²¥³ö30ÃëÉÏ¼¯£¬°ä½±µäÀñÖÐÔò²¥³ö30ÃëÏÂ¼¯£¬×îºóÔÙ³ÊÏÖ60ÃëµÄÍêÕû°æ¡£¹ÛÖÚ±ØÐëÈ«³ÌËø¶¨°ä½±µäÀñ£¬ÒÔÃâ´í¹ý¾«²ÊË²¼ä¡£</p>
-<p>±±Á÷ÖÐÐÄÎ»ÓÚÀ¥Ñô½ÝÔËÕ¾ÓëÄÏ¸Û³µÕ¾Ö®¼ä£¬ÊÇÒÔ¡°Á÷ÐÐÒôÀÖ¡±ÎªÖ÷ÌâµÄ¸´ºÏÐÍÔ°Çø£¬ÄÚº¬Èý¸ö³¡¹Ý£º±íÑÝÌü¡¢ÎÄ»¯¹Ý¡¢²úÒµÇø¡£±íÑÝÌü×î¶à¿ÉÈÝÄÉ6000ÈË£¬³ý²¹×ãÌ¨ÍåÄ¿Ç°×îØÑ·¦µÄÖÐ´óÐÍÑÝ³ö³¡µØ¿ÕÈ±£¬Ò²¿ÉÍû³ÉÎªÒÕÈË¸èÊÖÀÛ»ý¾­Ñé¡¢ÊµÏÖÃÎÏëµÄÎèÌ¨¡£</p>
-<p>±±Á÷ÖÐÐÄ±íÑÝÌüÔ¤¼ÆÓÚ2020ÄêµÚ¶þ¼¾¿ª¹Ý£»ÎÄ»¯¹Ý¡¢²úÒµÇøÔò½«½ÓÐø¿ªÄ»¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ26æ—¥è®¯ã€‘ç»è¿‡è¿‘åŠå¹´é…é…¿ï¼Œâ€œ<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E6%B5%81%E8%A1%8C%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83.md#1">å°åŒ—æµè¡ŒéŸ³ä¹ä¸­å¿ƒ</a>â€ï¼ˆä»¥ä¸‹ç®€ç§°<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8C%97%E6%B5%81.md#1">åŒ—æµ</a>ä¸­å¿ƒï¼‰é¦–æ”¯å½¢è±¡å½±ç‰‡ç»ˆäºŽå®Œæˆï¼Œå¹¶å°†äºŽ29æ—¥ç¬¬30å±Šé‡‘æ›²é¢å¥–å…¸ç¤¼çŽ°åœºå…¨çƒé¦–æ’­ã€‚åŒ—æµä¸­å¿ƒå½¢è±¡å½±ç‰‡ä»¥åŒ—æµè¡¨æ¼”åŽ…å®žæ™¯ç»“åˆéŸ³ä¹è·¨ç•Œæ½®æµè®¾è®¡ï¼Œå¼ºè°ƒâ€œåšæŒâ€çš„é‡è¦ï¼Œé‚€è¯·æ–°ç”Ÿä»£åˆ›ä½œä¹å›¢â€œ<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E8%8C%84%E5%AD%90%E8%9B%8B.md#1">èŒ„å­è›‹</a>â€æ¼”è‡ªå·±ï¼Œè¿™ä¹Ÿæ˜¯èŒ„å­è›‹å‡ºé“ä»¥æ¥é¦–åº¦å‚ä¸Žå½±ç‰‡æ¼”å‡ºã€‚</p>
+<figure id="attachment_11346799" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/06/1906260242031487.jpg"><img class="size-large wp-image-11346799" title="" src="https://i.epochtimes.com/assets/uploads/2019/06/1906260242031487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">â€œ<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E6%B5%81%E8%A1%8C%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83.md#1">å°åŒ—æµè¡ŒéŸ³ä¹ä¸­å¿ƒ</a>â€ï¼ˆä»¥ä¸‹ç®€ç§°<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8C%97%E6%B5%81.md#1">åŒ—æµ</a>ä¸­å¿ƒï¼‰é¦–æ”¯å½¢è±¡å½±ç‰‡é¦–æ’­ï¼Œç”±ä¹å›¢<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E8%8C%84%E5%AD%90%E8%9B%8B.md#1">èŒ„å­è›‹</a>æ‹…çº²ä¸»æ¼”ã€‚ï¼ˆèŒ„å­è›‹æä¾›ï¼‰</figcaption></figure>
+<p>åŒ—æµä¸­å¿ƒå½¢è±¡å½±ç‰‡ç”±å¯¼æ¼”é™ˆå¥•ä»ç»Ÿç­¹ï¼ŒçŽ‡é¢†ä»™è‰å½±åƒå›¢é˜Ÿæ‹æ‘„ï¼Œæè¿°æ–°ç”Ÿä»£ä¹å›¢å¦‚ä½•ä»Žé»˜é»˜æ— é—»ä¸€è·¯ç™»ä¸ŠåŒ—æµ6000äººèˆžå°çš„æ•…äº‹ã€‚</p>
+<p>å¯¼æ¼”ä»¥å¤å¤2DåŠ¨ç”»èžåˆå®žæ™¯æ‹æ‘„æ‰‹æ³•ï¼Œå‘ˆçŽ°ä¹å›¢â€œæˆååœ¨æœ›â€è¿‡ç¨‹ä¸­ï¼Œâ€œåšæŒâ€çš„é‡è¦æ€§ã€‚æ›¾ç»è¿žé¥­éƒ½åƒä¸é¥±ï¼Œâ€œçŽ©éŸ³ä¹â€è¦æˆä¸ºèŒä¸šï¼Œæ›´æ˜¯é¢ä¸´è®¸å¤šå›°éš¾ã€‚åŒ—æµå½¢è±¡å½±ç‰‡é™¤äº†å¸¦ç»™æ°‘ä¼—æœ€æ–°çš„æ„Ÿå®˜åˆºæ¿€ï¼Œä¹Ÿä¼ è¾¾åœºé¦†æä¾›æ›´å¤šæ–°ç”Ÿä»£æ­Œæ‰‹ç™»ä¸Šèˆžå°æœºä¼šçš„ç†å¿µã€‚</p>
+<p>åŒ—æµä¸­å¿ƒå½¢è±¡å½±ç‰‡â€œå«é‡‘é‡â€è¶…é«˜ï¼Œä¸»è§’èŒ„å­è›‹æ˜¯åŽ»å¹´ï¼ˆç¬¬29å±Šï¼‰é‡‘æ›²æ–°äººå¥–å¾—ä¸»ã€ä»Šå¹´å†æ¬¡ä»¥ã€Šæµªæµè¿žã€‹å…¥å›´å¹´åº¦æ­Œæ›²å¥–ã€‚å¯¼æ¼”é™ˆå¥•ä»ä¹Ÿæ˜¯é‡‘æ›²å¸¸èƒœå†›ï¼Œä»Šå¹´ä»¥è”¡ä¾æž—ã€Šæ€ªç¾Žçš„ã€‹MVå…¥å›´æœ€ä½³éŸ³ä¹å½•å½±å¸¦å¥–ã€‚</p>
+<p>åŒ—æµå½¢è±¡å½±ç‰‡æ’­æ”¾ä¸Šç‰¹åˆ«è®¾è®¡å°å·§æ€ï¼Œåˆ†åˆ«åœ¨é‡‘æ›²æ˜Ÿå…‰å¤§é“æ’­å‡º30ç§’ä¸Šé›†ï¼Œé¢å¥–å…¸ç¤¼ä¸­åˆ™æ’­å‡º30ç§’ä¸‹é›†ï¼Œæœ€åŽå†å‘ˆçŽ°60ç§’çš„å®Œæ•´ç‰ˆã€‚è§‚ä¼—å¿…é¡»å…¨ç¨‹é”å®šé¢å¥–å…¸ç¤¼ï¼Œä»¥å…é”™è¿‡ç²¾å½©çž¬é—´ã€‚</p>
+<p>åŒ—æµä¸­å¿ƒä½äºŽæ˜†é˜³æ·è¿ç«™ä¸Žå—æ¸¯è½¦ç«™ä¹‹é—´ï¼Œæ˜¯ä»¥â€œæµè¡ŒéŸ³ä¹â€ä¸ºä¸»é¢˜çš„å¤åˆåž‹å›­åŒºï¼Œå†…å«ä¸‰ä¸ªåœºé¦†ï¼šè¡¨æ¼”åŽ…ã€æ–‡åŒ–é¦†ã€äº§ä¸šåŒºã€‚è¡¨æ¼”åŽ…æœ€å¤šå¯å®¹çº³6000äººï¼Œé™¤è¡¥è¶³å°æ¹¾ç›®å‰æœ€åŒ®ä¹çš„ä¸­å¤§åž‹æ¼”å‡ºåœºåœ°ç©ºç¼ºï¼Œä¹Ÿå¯æœ›æˆä¸ºè‰ºäººæ­Œæ‰‹ç´¯ç§¯ç»éªŒã€å®žçŽ°æ¢¦æƒ³çš„èˆžå°ã€‚</p>
+<p>åŒ—æµä¸­å¿ƒè¡¨æ¼”åŽ…é¢„è®¡äºŽ2020å¹´ç¬¬äºŒå­£å¼€é¦†ï¼›æ–‡åŒ–é¦†ã€äº§ä¸šåŒºåˆ™å°†æŽ¥ç»­å¼€å¹•ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/26/n11346771.htm">¡°±±Á÷¡±ÐÎÏóÓ°Æ¬½ðÇúÊ×²¥ ÀÖÍÅÇÑ×Óµ°Ö÷ÑÝ</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11345177.htm">ÇÑ×Óµ°¡¢É£Ã·¾îShowcase²ÊÅÅ 15×é¸èÊÖ½ÓÁ¦³ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260055.htm">µÚ30½ì½ðÇú½±ÈëÎ§Ãûµ¥¹«²¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/5/n11234681.htm">hitoÁ÷ÐÐÒôÀÖ½±6ÔÂµÇ³¡ 37×éÒÕÈË¹²ÏåÊ¢¾Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/1/n11226310.htm">¡°³¬Ï¬ÀûÅ¿¡±Ê®ÖÜÄê ¼¯½áÑÇÖÞ27×é¸èÊÖÏ×³ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/28/n11007525.htm">2/18À©´ó¾ÙÐÐ ÐÂ±±»¨µÆÕ¹ÏÖÖÐ»ªÎÄ»¯¼ÇÒä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/27/n11005023.htm">ÄªÎÄÎµÐÂ×°ÇÀÑÛ Óë¡°·çÔÆ¸èÊÖ¡±ÈÈÁ¦½Ó³ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/29/n10939808.htm">¿çÄêÅÄÑÌ»ðÓ­Êï¹â¿´Íí»á È«Ì¨»î¶¯ÀÁÈË°ü</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11344919.htm">ÔÚ´óÂ½Ôâ¾Ù±¨ ¹Ý³¤ÅóÓÑ¾ª»ê20Ð¡Ê±ÌÓ»ØÌ¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11343950.htm">¡¾·­Ç½±Ø¿´¡¿Ì«¹îÒì ¹ÙÃ½Îª¡°À÷º¦¹ú¡±·­°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11343917.htm">ºì¶þ´ú£º´¨ÆÕ¶ÔÖÐ¹²·¢ÆðÈ«ÃæÀäÕ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11344817.htm">ÈýÖÐ×ÊÒøÐÐ±»µãÃûÌæ³¯ÏÊÏ´Ç® »òÔâÃÀ³Í·£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/8/n11171684.htm">¡¾ÏÍºó´«¡¿Ê·ÉÏÃüÔË×îÀëÆæµÄÒ»Î»»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/7/n11307310.htm">ÃüÖÐÓÐ²ÆÓëÎÞ²Æ£¨ÖÐ£©£ºÕæÄÜËã³öÀ´£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324574.htm">¡¾ÖÐ»ªÉÌµÀ¡¿ÒÔÐÅÒå¾­ÉÌÖÎ¼ÒµÄ½úÉÌÇÇÖÂÓ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341454.htm">ÑÝ³ª»áÉùÔ®·´ËÍÖÐ ÂÞ´óÓÓ¸èÇúÔâÖÐ¹²·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/24/n11343485.htm">ËµÏàÉùÉæ´óÂ½Èý´óµØÕð ÕÅÔÆÀ×¾µÍ·Ôâ¼ô³É¿¨Í¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341735.htm">¾íÈë±ß¼ì·ç²¨ÎåÌì Ôøéó¿É½ÚÄ¿¾µÍ·È«±»¼ô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341610.htm">Ð»ÄÈ»ØÓ¦Ö÷³Ö·ç¸ñÕùÒé£ºÎÒÕâÐÍÍ¦ºÃµÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341664.htm">¹«¿ªËæÉí°ü°üÓÃÆ· ¹ØÏþÍ®´×²»ÀëÉí¾ª´ôÖÚÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338481.htm">¡¾ÐÂÎÅ¿´µã¡¿G20Ç°ÆÚ»áÔâ19¹ú·´¶Ô ±±¾©ÏÝ¹ÂÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340360.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°½ð¸ßµ÷»áÎî ÁªÊÖ¿¹ÃÀ¿Ö×ÔÉË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336260.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°½üÆ½Îå¼û½ðÕý¶÷ ¸÷ÓÐºÎÅÌËã£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/24/n11343615.htm">»ªÎª×¤Íâ´ú±íÇ°ÆÞ ½Ò»ªÎªÓëÖÐ¹²Õþ¸®¹ØÏµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/24/n11343388.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©ÅúÃÀÉý¼¶ ÃÀ¹úÖØËÜÈ«Çò¾­¼Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/24/n11342203.htm">ÃÀ¾üF-35Õ½»ú½«ÓÐÐÂÎäÆ÷ ¿É¶Ô¸¶ÖÐ¹²¼ß-20</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/29/n10939808.md#1">è·¨å¹´æ‹çƒŸç«è¿Žæ›™å…‰çœ‹æ™šä¼š å…¨å°æ´»åŠ¨æ‡’äººåŒ…</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/27/n11005023.md#1">èŽ«æ–‡è”šæ–°è£…æŠ¢çœ¼ ä¸Žâ€œé£Žäº‘æ­Œæ‰‹â€çƒ­åŠ›æŽ¥å”±</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/28/n11007525.md#1">2/18æ‰©å¤§ä¸¾è¡Œ æ–°åŒ—èŠ±ç¯å±•çŽ°ä¸­åŽæ–‡åŒ–è®°å¿†</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/5/1/n11226310.md#1">â€œè¶…çŠ€åˆ©è¶´â€åå‘¨å¹´ é›†ç»“äºšæ´²27ç»„æ­Œæ‰‹çŒ®å”±</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh2/djy/blob/master/gb/19/6/26/n11346771.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh2/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh2/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">æž—è¾‰ï¼šå› å¦‚æ­¤è’è¯žç†ç”± ä»–ä»¬æˆä¸ºäº†â€œå³æ´¾â€</a></li><li><a href="https://github.com/oqudue369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">å¤§å­¦æ•™æŽˆä¿®ç‚¼èº«å¿ƒå—ç›Š åè¿«å®³æŽ§å‘Šæ±Ÿæ³½æ°‘</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">ä¸Šæµ·æš´é›¨â€œä¸­å›½ç¬¬ä¸€é«˜æ¥¼â€å¤šå±‚æ¥¼æ¼æ°´ä¸¥é‡</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237074.md#1">41å²ç”·æ˜ŸæŸ“ç–«é­æˆªè‚¢ æ²»ç–—æ•°æœˆä»ä¸æ•Œç—…é­”</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236101.md#1">çºµæ¨ªç ´è§£ï¼šé¢„è¨€ä¸Žäººç”Ÿï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240967.md#1">æººæ°´æ—¶çµé­‚å‡ºçª å°å¥³å­©çœ‹è§è‡ªå·±çš„èº«ä½“</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/26/n11346771.htm">â€œåŒ—æµâ€å½¢è±¡å½±ç‰‡é‡‘æ›²é¦–æ’­ ä¹å›¢èŒ„å­è›‹ä¸»æ¼”</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/19/6/26/n11346771.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
